# blockblastbot

./: .gitignore  main.py  pyproject.toml  pyrightconfig.toml  readme.md
src/: automator.py  capture.py  config.py  solver.py  vision.py
src/blockblast_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
