# This file manages the project's metadata, dependencies, and tool configurations.

# --- Build System Information ---
# Standard boilerplate required for modern Python packaging tools like pip and uv.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# --- Project Metadata (PEP 621) ---
[project]
name = "blockblast-bot"
version = "0.1.0"
description = "A Python bot to automate playing the Block Blast game using native screen capture on macOS."
readme = "README.md"                                                                                        # Assumes you will create a README file later
requires-python = ">=3.9"
license = { text = "MIT" }

# --- Project Dependencies ---
# This is where you list the packages your bot needs to run.
dependencies = [
  "Pillow",
  # This dependency is marked as only being required on macOS ('darwin').
  "pyobjc-framework-quartz; sys_platform == 'darwin'",
  "pyautogui",
]

# Optional: Add links to your GitHub repository.
[project.urls]
Homepage = "https://github.com/rvzo6/blockblastbot"
"Bug Tracker" = "https://github.com/rvzo6/blockblastbot/issues"

# --- Tool Configurations ---

# Replaces your pyrightconfig.toml file.
[tool.pyright]
include = ["src"]
venvPath = "."
venv = "venv"
typeCheckingMode = "off"

# This section helps packaging tools understand your 'src' layout.
[tool.setuptools.packages.find]
where = ["src"]
